fix section overflow

--- a/components/ui/surfaces/menu/section/section.module.scss
+++ b/components/ui/surfaces/menu/section/section.module.scss
@@ -3,7 +3,9 @@
   // border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   margin: 12px 0;
   font-size: var(--bit-p-xs);
-  overflow: hidden;
+  > a {
+    overflow: hidden;
+  }
 }
 
 // `> *` doesn't add specificity, so adding 'div' instead
